--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,3 +1,5 @@
+name: CI
+
 on: [push]
 
 jobs:
@@ -12,11 +14,10 @@ jobs:
 
       - name: Copy .env.example files
         shell: bash
-        run: find . -type f -name ".env.example" -exec sh -c 'cp "${1%.*}"' _ {} \;
+        run: find . -type f -name ".env.example" -exec sh -c 'cp "$1" "${1%.*}"' _ {} \;
 
       - name: Typecheck
         run: pnpm typecheck
 
       - name: Lint
         run: pnpm lint
-    
