--- a/package.json
+++ b/package.json
@@ -20,20 +20,24 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.10.3",
     "@libsql/client": "^0.9.0",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.1",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@uploadthing/react": "^7.1.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.38.4",
     "geist": "^1.3.0",
-    "lucide-react": "^0.477.0",
+    "lucide-react": "^0.474.0",
     "mysql2": "^3.12.0",
-    "next": "^15.0.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "tailwind-merge": "^3.0.2",
+    "next": "^15.1.6",
+    "posthog-js": "^1.211.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^7.4.4",
     "zod": "^3.23.3"
   },
   "devDependencies": {
@@ -45,7 +49,7 @@
     "@typescript-eslint/parser": "^8.1.0",
     "drizzle-kit": "^0.30.2",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^15.0.1",
+    "eslint-config-next": "^15.1.6",
     "eslint-plugin-drizzle": "^0.2.3",
     "postcss": "^8.4.39",
     "prettier": "^3.3.2",
@@ -56,5 +60,5 @@
   "ct3aMetadata": {
     "initVersion": "7.38.1"
   },
-  "packageManager": "pnpm@10.5.2"
+  "packageManager": "pnpm@9.10.0"
 }
