--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,8 @@ DATABASE_URL="file:./db.sqlite"
 # Example:
 # SERVERVAR="foo"
 # NEXT_PUBLIC_CLIENTVAR="bar"
+SINGLESTORE_USER="db_user"
+SINGLESTORE_PASS="db_password"
+SINGLESTORE_HOST="dburl.svc.singlestore.com"
+SINGLESTORE_PORT="3333"
+SINGLESTORE_DB_NAME="db_name"
